# fail_safe

./: .buildinfo  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  envfile  fail_safe.classes.html  fail_safe.config.html  fail_safe.html  fail_safe.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  savedstate___main__.pickle  search.html  searchindex.js
.github/workflows/: CI.yml
_sources/: fail_safe.classes.rst.txt  fail_safe.config.rst.txt  index.rst.txt  modules.rst.txt
_static/: sig_word-break.css
docker/fail_safe-dev/: .bashrc  Dockerfile  fail_safe.code-workspace  requirements.txt
docs/: Makefile
docs/source/: conf.py  fail_safe.classes.rst  fail_safe.decorators.rst  fail_safe.rst  fail_safe.utils.rst  index.rst
src/fail_safe/: __init__.py
src/fail_safe/classes/: __init__.py  state.py  storage.py
src/fail_safe/config/: __init__.py  env.py
src/fail_safe/decorators/: __init__.py  timed.py
src/fail_safe/utils/: __init__.py  frames.py
tests/: conftest.py  test_env.py
tests/classes/: test_state.py
tests/utils/: test_frames.py
